--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sergio Terroso Cabrera :: Desafío Simulador :: Inicio</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="container">
@@ -15,7 +16,7 @@
                 <h1>Inicio</h1>
             </div>
 
-            <nav class="nav-bar">
+            <nav id="nav-bar">
                 <ul class="main-menu">
                     <li class="menu-item"><a href="./" class="link active">Inicio</a></li>
                     <li class="menu-item"><a href="views/cotizador.html" class="link">Cotizador</a></li>
